postgresql/service.yml
apiVersion: v1
kind: Service
metadata:  
  name: svc
spec:
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: 5432
  type: ClusterIP
#  type: NodePort
#  type: LoadBalancer
