postgresql/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: route
spec:
  entryPoints:
  - postgres
  routes:
  - match: HostSNI(`*`)
    services:
    - name: postgres-svc
      port: 5432
